build.log.txt
Generating code snapsht in ./llms.txt ...
╭──────────────── CodeToPrompt ─────────────────╮
│ Configuration for this run:                   │
│ Root Directory:                               │
│ /Users/adam/Developer/vcs/github.twardoch/pub │
│ /svgn                                         │
│ Include Patterns: ['*']                       │
│ Exclude Patterns: ['*.svg', '.specstory',     │
│ '*.md', '*.txt']                              │
│ Respect .gitignore: True                      │
│ Show Line Numbers: False                      │
│ Count Tokens: True                            │
│ Compress Code: False                          │
│ Max Tokens: Unlimited                         │
│ Tree Depth: 5                                 │
│ Output Format: default                        │
│ Interactive Mode: False                       │
╰───────────────────────────────────────────────╯

╭───────────── Processing Complete ─────────────╮
│ Summary:                                      │
│ Files Processed: 96                           │
│ Total Tokens: 221,114                         │
│ Output Destination: llms.txt                  │
│                                               │
│ Top 3 Files by Tokens:                        │
│   - Cargo.lock (14,781 tokens)                │
│   - svgn/Cargo.lock (14,781 tokens)           │
│   - svgn/src/plugins/convert_path_data.rs     │
│ (6,232 tokens)                                │
│                                               │
│ Top 5 Extensions by Tokens:                   │
│   - .rs (176,891 tokens)                      │
│   - .lock (29,562 tokens)                     │
│   - .sh (3,913 tokens)                        │
│   - .yml (2,940 tokens)                       │
│   - .bak (2,786 tokens)                       │
╰───────────────────────────────────────────────╯
Building the svgn project...
warning: unused variable: `plugin_info`
  --> svgn/src/plugins/convert_path_data.rs:37:9
   |
37 |         plugin_info: &PluginInfo,
   |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_plugin_info`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `cmd`
   --> svgn/src/plugins/convert_path_data.rs:664:24
    |
664 | fn should_use_absolute(cmd: &PathCommand, current_x: f64, current_y: f64, _precision: u8) -> bool {
    |                        ^^^ help: if this is intentional, prefix it with an underscore: `_cmd`

warning: unused variable: `current_x`
   --> svgn/src/plugins/convert_path_data.rs:664:43
    |
664 | fn should_use_absolute(cmd: &PathCommand, current_x: f64, current_y: f64, _precision: u8) -> bool {
    |                                           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_current_x`

warning: unused variable: `current_y`
   --> svgn/src/plugins/convert_path_data.rs:664:59
    |
664 | fn should_use_absolute(cmd: &PathCommand, current_x: f64, current_y: f64, _precision: u8) -> bool {
    |                                                           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_current_y`

warning: `svgn` (lib) generated 4 warnings
    Finished `release` profile [optimized] target(s) in 0.11s
Running tests...
warning: unused variable: `plugin_info`
  --> svgn/src/plugins/convert_path_data.rs:37:9
   |
37 |         plugin_info: &PluginInfo,
   |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_plugin_info`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `cmd`
   --> svgn/src/plugins/convert_path_data.rs:664:24
    |
664 | fn should_use_absolute(cmd: &PathCommand, current_x: f64, current_y: f64, _precision: u8) -> bool {
    |                        ^^^ help: if this is intentional, prefix it with an underscore: `_cmd`

warning: unused variable: `current_x`
   --> svgn/src/plugins/convert_path_data.rs:664:43
    |
664 | fn should_use_absolute(cmd: &PathCommand, current_x: f64, current_y: f64, _precision: u8) -> bool {
    |                                           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_current_x`

warning: unused variable: `current_y`
   --> svgn/src/plugins/convert_path_data.rs:664:59
    |
664 | fn should_use_absolute(cmd: &PathCommand, current_x: f64, current_y: f64, _precision: u8) -> bool {
    |                                                           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_current_y`

   Compiling svgn v1.2.3 (/Users/adam/Developer/vcs/github.twardoch/pub/svgn/svgn)
warning: `svgn` (lib) generated 4 warnings
error[E0432]: unresolved import `crate::test_utils`
   --> svgn/src/plugins/remove_useless_stroke_and_fill.rs:322:16
    |
322 |     use crate::test_utils::parse_svg;
    |                ^^^^^^^^^^ could not find `test_utils` in the crate root

For more information about this error, try `rustc --explain E0432`.
warning: `svgn` (lib test) generated 4 warnings (4 duplicates)
error: could not compile `svgn` (lib test) due to 1 previous error; 4 warnings emitted
